# filely

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
api/: api_handler.cpp  api_handler.h  api_main.cpp
fileTest/: input.csv  input.json  output.csv  output.json
include/: cli.h  converter.h  fileformat.h  filereader.h  filewriter.h  utils.h
include/formatters/: bmpformat.h  csvformat.h  jpegformat.h  jpgformat.h  jsonformat.h  pngformat.h  textformat.h
src/: cli.cpp  converter.cpp  fileformat.cpp  filereader.cpp  filewriter.cpp  main.cpp  utils.cpp
src/formatters/: bmpformat.cpp  csvformat.cpp  jpegformat.cpp  jpgformat.cpp  jsonformat.cpp  pngformat.cpp  textformat.cpp
test/: test_api.cpp  test_cli.cpp
